# Asset-Manager

./: .replit  package-lock.json  pyproject.toml  replit.md  test_bot_logic.py  trades_history.csv  trading_bot.py
attached_assets/: Pasted-Atualize-o-trading-bot-py-gerado-anteriormente-mantendo_1770568968332.txt  Pasted-Crie-um-script-Python-completo-e-funcional-no-Replit-pa_1770567776190.txt  Pasted-Voc-o-agente-IA-respons-vel-pelo-bot-de-trading-GBPUSD-_1771175219604.txt  Pasted-Voc-um-especialista-em-Python-para-trading-automatizado_1771098515494.txt
client/: requirements.md
client/src/: App.tsx  index.css
client/src/components/: ConsoleInstructions.tsx  MetricCard.tsx  SignalRow.tsx  app-sidebar.tsx
client/src/hooks/: use-signals.ts
client/src/pages/: Dashboard.tsx  ai-analysis.tsx  history.tsx  settings.tsx
server/: routes.ts  storage.ts
shared/: routes.ts  schema.ts
